Refactor navbar structure and add hamburger menu

--- a/index.html
+++ b/index.html
@@ -13,19 +13,29 @@
 <body>
 
 <!-- ===== NAVBAR ===== -->
-<nav class="navbar glass">
-    <h2 class="logo">BADMINTON</h2>
+<nav class="navbar">
+    <div class="nav-container">
 
-    <ul class="nav-links">
-        <li><a href="#home">Home</a></li>
-        <li><a href="#profil">Profil</a></li>
-        <li><a href="#struktur">Struktur</a></li>
-        <li><a href="#galeri">Galeri</a></li>
-        <li><a href="#prestasi">Prestasi</a></li>
-        <li><a href="#jadwal">Jadwal</a></li>
-        <li><a href="#pengumuman">Pengumuman</a></li>
-        <li><a href="#survey">Survey</a></li>
-    </ul>
+        <h2 class="logo">BADMINTON</h2>
+
+        <ul class="nav-links">
+            <li><a href="#home">Home</a></li>
+            <li><a href="#profil">Profil</a></li>
+            <li><a href="#struktur">Struktur</a></li>
+            <li><a href="#galeri">Galeri</a></li>
+            <li><a href="#prestasi">Prestasi</a></li>
+            <li><a href="#jadwal">Jadwal</a></li>
+            <li><a href="#pengumuman">Pengumuman</a></li>
+            <li><a href="#survey">Survey</a></li>
+        </ul>
+
+        <div class="hamburger">
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
+
+    </div>
 </nav>
 
 <!-- ===== HERO ===== -->
