Update hero section with new buttons and links

--- a/index.html
+++ b/index.html
@@ -44,17 +44,21 @@
     <div class="hero-content">
         <h1 class="reveal-text">Badminton Smangat</h1>
 
-        <p class="reveal-text">
+        <p class="reveal delay">
             Wadah pengembangan bakat dan prestasi bulu tangkis siswa.
         </p>
 
-        <div class="hero-btn">
+        <div class="hero-buttons reveal delay2">
             <a href="#jadwal" class="btn-primary">Lihat Jadwal</a>
 
-            <a href="https://surveyheart.com/form/69925bd88954acdeb7cd3a86"
-               target="_blank"
-               class="btn-secondary">
-               Isi Survey
+            <a href="#survey" class="btn-primary">
+                Isi Survey
+            </a>
+
+            <a href="https://www.instagram.com/badminton_smangat"
+            target="_blank"
+            class="btn-secondary">
+                Instagram
             </a>
         </div>
     </div>
