--- a/index.html
+++ b/index.html
@@ -68,80 +68,83 @@
 <!-- ===== PROFIL ===== -->
 <section id="profil" class="section">
 
-<div class="container about-card">
+    <h2>Profil Ekskul</h2>
 
-    <div class="about-img">
-        <img src="img/logo.jpeg">
+    <div class="grid grid-2">
+
+        <div class="card">
+            <h3>Tentang Ekskul</h3>
+            <p>
+                Ekskul badminton merupakan wadah pengembangan teknik,
+                strategi permainan, dan sportivitas.
+            </p>
+        </div>
+
+        <div class="card">
+            <img src="img/logo.jpeg">
+            <p>Logo Resmi Ekskul</p>
+        </div>
+
     </div>
-
-    <div class="about-text">
-        <h2>Profil Ekskul</h2>
-
-        <p>
-        Ekskul badminton merupakan wadah pengembangan kemampuan teknik,
-        strategi permainan, serta pembentukan karakter disiplin dan sportivitas.
-        </p>
-    </div>
-
-</div>
 
 </section>
 
 <!-- ===== STRUKTUR ===== -->
 <section id="struktur" class="section">
 
-<h2 class="section-title">Struktur Organisasi</h2>
+<h2>Struktur Organisasi</h2>
 
-<div class="struktur-grid">
+<div class="grid grid-3">
 
-<div class="struktur-card">
-<h3>Pelatih</h3>
-<p>Wahyu Nur Wachid</p>
+<div class="card">
+    <h3>Pelatih</h3>
+    <p>Wahyu Nur Wachid</p>
 </div>
 
-<div class="struktur-card">
-<h3>Pelatih</h3>
-<p>M. Revan Anggara</p>
+<div class="card">
+    <h3>Pelatih</h3>
+    <p>M. Revan Anggara</p>
 </div>
 
-<div class="struktur-card">
-<h3>Ketua</h3>
-<p>Fajar Sakti Ardhiansyah</p>
+<div class="card">
+  <h3>Ketua</h3>
+  <p>Fajar Sakti Ardhiansyah</p>
 </div>
 
-<div class="struktur-card">
-<h3>Wakil Ketua</h3>
-<p>Dafi Fahrudin</p>
+<div class="card">
+    <h3>Wakil Ketua</h3>
+    <p>Dafi Fahrudin</p>
 </div>
 
-<div class="struktur-card">
-<h3>Sekretaris 1</h3>
-<p>Sesya Echa Kirani Putri</p>
+
+<div class="card">
+    <h3>Sekretaris 1</h3>
+    <p>Sesya Echa Kirani Putri</p>
 </div>
 
-<div class="struktur-card">
-<h3>Sekretaris 2</h3>
-<p>Farsya Latifa</p>
+<div class="card">
+    <h3>Sekretaris 2</h3>
+    <p>Farsya Latifa</p>
 </div>
 
-<div class="struktur-card">
-<h3>Bendahara 1</h3>
-<p>Dewi Gita Surya Lestari</p>
+<div class="card">
+    <h3>Bendahara 1</h3>
+    <p>Dewi Gita Surya Lestari</p>
 </div>
 
-<div class="struktur-card">
-<h3>Bendahara 2</h3>
-<p>Aghnidya Laksmi</p>
+<div class="card">
+    <h3>Bendahara 2</h3>
+    <p>Aghnidya Laksmi</p>
 </div>
 
-<div class="struktur-card">
-<h3>Sie Kebersihan 1</h3>
-<p>Minannur Rohman</p>
+<div class="card">
+    <h3>Sie Kebersihan 1</h3>
+    <p>Minannur Rohman</p>
 </div>
 
-<div class="struktur-card">
-<h3>Sie Kebersihan 2</h3>
-<p>Fandi Pradana</p>
+<div class="card">
+    <h3>Sie Kebersihan 2</h3>
+    <p>Fandi Pradana</p>
 </div>
 
 </div>
@@ -174,24 +177,24 @@
 
 <h2 class="section-title">Prestasi</h2>
 
-<div class="prestasi-grid">
+<div class="grid grid-3">
 
-<div class="prestasi-card">
+<div class="card">
 <img src="img/p1.jpg">
 <p>Juara 1 Turnamen Beregu PB Dworowati</p>
 </div>
 
-<div class="prestasi-card">
+<div class="card">
 <img src="img/p2.jpg">
 <p>Juara 2 Turnamen Beregu PB Dworowati</p>
 </div>
 
-<div class="prestasi-card">
+<div class="card">
 <img src="img/p3.jpg">
 <p>Juara 2 Turnamen Beregu PB Dworowati</p>
 </div>
 
-<div class="prestasi-card">
+<div class="card">
 <img src="img/p4.jpg">
 <p>Juara 1 & 2 Turnamen Ganda C PB Dworowati</p>
 </div>
@@ -238,9 +241,9 @@
 
 <h2 class="section-title">Pengumuman</h2>
 
-<div class="pengumuman-grid">
+<div class="grid grid-2">
 
-<div class="pengumuman-card">
+<div class="card">
 <h3>Peraturan</h3>
 <p>
 Wajib menggunakan sandal saat berangkat,
@@ -248,7 +251,7 @@ sepatu dipakai waktu di dalam gedung
 </p>
 </div>
 
-<div class="pengumuman-card">
+<div class="card">
 <h3>Untuk pengurus dan anggota</h3>
 <p>
 Diusahakan datang tepat waktu dan selalu menjaga kebersihan gedung
