Revise profil section content and layout
Updated the profil section with improved text and structure.

--- a/index.html
+++ b/index.html
@@ -66,23 +66,29 @@
 </section>
 
 <!-- ===== PROFIL ===== -->
-<section id="profil" class="section">
+<section id="profil" class="section profil-section">
 
-    <h2>Profil Ekskul</h2>
+    <div class="profil-wrapper">
 
-    <div class="grid grid-2">
+        <!-- TEXT -->
+        <div class="profil-text card reveal">
+            <h2>Profil Ekskul</h2>
 
-        <div class="card">
-            <h3>Tentang Ekskul</h3>
             <p>
-                Ekskul badminton merupakan wadah pengembangan teknik,
-                strategi permainan, dan sportivitas.
+                Ekskul badminton merupakan wadah pengembangan kemampuan teknik,
+                strategi permainan, serta pembentukan karakter disiplin dan sportivitas.
+            </p>
+
+            <p>
+                Kegiatan latihan dilakukan secara rutin dengan pembinaan dari pelatih
+                berpengalaman untuk meningkatkan prestasi siswa.
             </p>
         </div>
 
-        <div class="card">
-            <img src="img/logo.jpeg">
-            <p>Logo Resmi Ekskul</p>
+
+        <!-- IMAGE -->
+        <div class="profil-image reveal delay">
+            <img src="img/logo.jpeg" alt="Logo Ekskul">
         </div>
 
     </div>
