Refactor Struktur section with new layout and classes

--- a/index.html
+++ b/index.html
@@ -96,64 +96,87 @@
 </section>
 
 <!-- ===== STRUKTUR ===== -->
-<section id="struktur" class="section">
+<section id="struktur" class="section struktur-section">
 
-<h2>Struktur Organisasi</h2>
+<h2 class="reveal">Struktur Organisasi</h2>
 
-<div class="grid grid-3">
+<div class="struktur-wrapper">
 
-<div class="card">
-    <h3>Pelatih</h3>
-    <p>Wahyu Nur Wachid</p>
+    <!-- TOP : PELATIH -->
+    <div class="struktur-row center reveal">
+        <div class="card struktur-card">
+            <h3>Pelatih</h3>
+            <p>Wahyu Nur Wachid</p>
+        </div>
+
+        <div class="card struktur-card">
+            <h3>Pelatih</h3>
+            <p>M. Revan Anggara</p>
+        </div>
+    </div>
+
+
+    <!-- KETUA -->
+    <div class="struktur-row center reveal delay">
+        <div class="card struktur-card utama">
+            <h3>Ketua</h3>
+            <p>Fajar Sakti Ardhiansyah</p>
+        </div>
+    </div>
+
+
+    <!-- WAKIL -->
+    <div class="struktur-row center reveal delay2">
+        <div class="card struktur-card">
+            <h3>Wakil Ketua</h3>
+            <p>Dafi Fahrudin</p>
+        </div>
+    </div>
+
+
+    <!-- SEKRETARIS -->
+    <div class="struktur-row reveal">
+        <div class="card struktur-card">
+            <h3>Sekretaris 1</h3>
+            <p>Sesya Echa Kirani Putri</p>
+        </div>
+
+        <div class="card struktur-card">
+            <h3>Sekretaris 2</h3>
+            <p>Farsya Latifa</p>
+        </div>
+    </div>
+
+
+    <!-- BENDAHARA -->
+    <div class="struktur-row reveal">
+        <div class="card struktur-card">
+            <h3>Bendahara 1</h3>
+            <p>Dewi Gita Surya Lestari</p>
+        </div>
+
+        <div class="card struktur-card">
+            <h3>Bendahara 2</h3>
+            <p>Aghnidya Laksmi</p>
+        </div>
+    </div>
+
+
+    <!-- SIE -->
+    <div class="struktur-row reveal">
+        <div class="card struktur-card">
+            <h3>Sie Kebersihan 1</h3>
+            <p>Minannur Rohman</p>
+        </div>
+
+        <div class="card struktur-card">
+            <h3>Sie Kebersihan 2</h3>
+            <p>Fandi Pradana</p>
+        </div>
+    </div>
+
 </div>
 
-<div class="card">
-    <h3>Pelatih</h3>
-    <p>M. Revan Anggara</p>
-</div>
-
-<div class="card">
-  <h3>Ketua</h3>
-  <p>Fajar Sakti Ardhiansyah</p>
-</div>
-
-<div class="card">
-    <h3>Wakil Ketua</h3>
-    <p>Dafi Fahrudin</p>
-</div>
-
-
-<div class="card">
-    <h3>Sekretaris 1</h3>
-    <p>Sesya Echa Kirani Putri</p>
-</div>
-
-<div class="card">
-    <h3>Sekretaris 2</h3>
-    <p>Farsya Latifa</p>
-</div>
-
-<div class="card">
-    <h3>Bendahara 1</h3>
-    <p>Dewi Gita Surya Lestari</p>
-</div>
-
-<div class="card">
-    <h3>Bendahara 2</h3>
-    <p>Aghnidya Laksmi</p>
-</div>
-
-<div class="card">
-    <h3>Sie Kebersihan 1</h3>
-    <p>Minannur Rohman</p>
-</div>
-
-<div class="card">
-    <h3>Sie Kebersihan 2</h3>
-    <p>Fandi Pradana</p>
-</div>
-
-</div>
 </section>
 
 <!-- ===== GALERI ===== -->
