Enhance gallery section with slider and event details

--- a/index.html
+++ b/index.html
@@ -180,22 +180,48 @@
 </section>
 
 <!-- ===== GALERI ===== -->
-<section id="galeri" class="section">
+<section id="galeri" class="section galeri-section">
 
-<h2 class="section-title">Galeri Kegiatan</h2>
+<h2 class="reveal">Galeri Kegiatan</h2>
 
-<div class="gallery-scroll">
+<!-- EVENT 1 -->
+<div class="galeri-block">
 
-<img src="img/g1.jpg">
-<img src="img/g2.jpg">
-<img src="img/g3.jpg">
-<img src="img/g4.jpg">
-<img src="img/g5.jpg">
-<img src="img/g6.jpg">
+    <h3 class="reveal">Latihan Rutin</h3>
 
-<img src="img/v1.jpg">
-<img src="img/v2.jpg">
-<img src="img/v3.jpg">
+    <div class="galeri-slider">
+
+        <div class="galeri-track">
+
+            <img src="img/g1.jpg">
+            <img src="img/g2.jpg">
+            <img src="img/g3.jpg">
+            <img src="img/g4.jpg">
+            <img src="img/g5.jpg">
+            <img src="img/g6.jpg">
+
+        </div>
+
+    </div>
+
+</div>
+
+
+<!-- EVENT 2 -->
+<div class="galeri-block">
+
+    <h3 class="reveal">Turnamen</h3>
+
+    <div class="galeri-slider">
+
+        <div class="galeri-track">
+
+            <img src="img/v1.jpg">
+            <img src="img/v2.jpg">
+
+        </div>
+
+    </div>
 
 </div>
 
