Refactor prestasi section with new structure

--- a/index.html
+++ b/index.html
@@ -228,33 +228,58 @@
 </section>
 
 <!-- ===== PRESTASI ===== -->
-<section id="prestasi" class="section">
+<section id="prestasi" class="section prestasi-section">
 
-<h2 class="section-title">Prestasi</h2>
+<h2 class="reveal">Prestasi</h2>
 
-<div class="grid grid-3">
+<div class="prestasi-slider">
 
-<div class="card">
-<img src="img/p1.jpg">
-<p>Juara 1 Turnamen Beregu PB Dworowati</p>
+    <div class="prestasi-track">
+
+        <!-- CARD -->
+        <div class="prestasi-item">
+            <img src="img/p1.jpg">
+
+            <div class="prestasi-overlay">
+                <h3>Juara 1</h3>
+                <p>Turnamen Beregu PB Dworowati</p>
+            </div>
+        </div>
+
+
+        <div class="prestasi-item">
+            <img src="img/p2.jpg">
+
+            <div class="prestasi-overlay">
+                <h3>Juara 2</h3>
+                <p>Turnamen Beregu PB Dworowati</p>
+            </div>
+        </div>
+
+
+        <div class="prestasi-item">
+            <img src="img/p3.jpg">
+
+            <div class="prestasi-overlay">
+                <h3>Juara 2</h3>
+                <p>Turnamen Beregu PB Dworowati</p>
+            </div>
+        </div>
+
+
+        <div class="prestasi-item">
+            <img src="img/p4.jpg">
+
+            <div class="prestasi-overlay">
+                <h3>Juara 1 & 2</h3>
+                <p>Turnamen Ganda C PB Dworowati</p>
+            </div>
+        </div>
+
+    </div>
+
 </div>
 
-<div class="card">
-<img src="img/p2.jpg">
-<p>Juara 2 Turnamen Beregu PB Dworowati</p>
-</div>
-
-<div class="card">
-<img src="img/p3.jpg">
-<p>Juara 2 Turnamen Beregu PB Dworowati</p>
-</div>
-
-<div class="card">
-<img src="img/p4.jpg">
-<p>Juara 1 & 2 Turnamen Ganda C PB Dworowati</p>
-</div>
-
-</div>
 </section>
 
 <!-- ===== JADWAL ===== -->
