Refactor jadwal section with improved structure

--- a/index.html
+++ b/index.html
@@ -283,37 +283,40 @@
 </section>
 
 <!-- ===== JADWAL ===== -->
-<section id="jadwal" class="section">
+<section id="jadwal" class="section jadwal-section">
 
-<h2 class="section-title">Jadwal Latihan</h2>
+<h2 class="reveal">Jadwal Latihan</h2>
 
-<div class="table-wrapper">
-<table>
+<div class="jadwal-wrapper reveal delay">
 
-<thead>
-<tr>
-<th>Hari</th>
-<th>Waktu</th>
-<th>Tempat</th>
-</tr>
-</thead>
+    <table class="jadwal-table">
 
-<tbody>
-<tr>
-<td>Kamis</td>
-<td>16.00</td>
-<td>Gedung Serbaguna Ngantang</td>
-</tr>
+        <thead>
+            <tr>
+                <th>Hari</th>
+                <th>Waktu</th>
+                <th>Tempat</th>
+            </tr>
+        </thead>
 
-<tr>
-<td>Sabtu</td>
-<td>08.00</td>
-<td>Gedung Serbaguna Ngantang</td>
-</tr>
-</tbody>
+        <tbody>
+            <tr>
+                <td>Kamis</td>
+                <td>16.00</td>
+                <td>Gedung Serbaguna Ngantang</td>
+            </tr>
 
-</table>
+            <tr>
+                <td>Sabtu</td>
+                <td>08.00</td>
+                <td>Gedung Serbaguna Ngantang</td>
+            </tr>
+        </tbody>
+
+    </table>
+
 </div>
+
 </section>
 
 <!-- ===== PENGUMUMAN ===== -->
