Refactor pengumuman section with new structure

--- a/index.html
+++ b/index.html
@@ -320,25 +320,24 @@
 </section>
 
 <!-- ===== PENGUMUMAN ===== -->
-<section id="pengumuman" class="section">
+<section id="pengumuman" class="pengumuman">
+  <h2 class="section-title reveal">Pengumuman</h2>
 
-<h2 class="section-title">Pengumuman</h2>
+  <div class="pengumuman-grid">
 
-<div class="grid grid-2">
+    <div class="pengumuman-card reveal">
+        <h3>Peraturan</h3>
+        <p>
+            Wajib menggunakan sandal saat berangkat,
+            sepatu dipakai waktu di dalam gedung
+        </p>
+    </div>
 
-<div class="card">
-<h3>Peraturan</h3>
-<p>
-Wajib menggunakan sandal saat berangkat,
-sepatu dipakai waktu di dalam gedung
-</p>
-</div>
-
-<div class="card">
-<h3>Untuk pengurus dan anggota</h3>
-<p>
-Diusahakan datang tepat waktu dan selalu menjaga kebersihan gedung
-</p>
+    <div class="pengumuman-card reveal">
+        <h3>Untuk pengurus dan anggota</h3>
+        <p>
+            Diusahakan datang tepat waktu dan selalu menjaga kebersihan gedung
+        </p>
 </div>
 
 </div>
