Revise survey section content and styling
Updated survey section with new title and text.

--- a/index.html
+++ b/index.html
@@ -344,9 +344,15 @@
 </section>
 
 <!-- ===== SURVEY ===== -->
-<section id="survey" class="section survey-cta">
+<section id="survey" class="survey">
+  <div class="survey-container reveal">
 
-<h2>Tertarik Bergabung?</h2>
+    <h2 class="section-title">Survey Kepuasan</h2>
+
+    <p class="survey-text">
+      Bantu kami berkembang dengan mengisi survey kepuasan. 
+      Masukan kalian penting banget buat peningkatan kualitas organisasi.
+    </p>
 
 <a href="https://surveyheart.com/form/69925bd88954acdeb7cd3a86"
 target="_blank"
