Refactor pengumuman section layout and content

--- a/index.html
+++ b/index.html
@@ -321,26 +321,34 @@
 
 <!-- ===== PENGUMUMAN ===== -->
 <section id="pengumuman" class="pengumuman">
-  <h2 class="section-title reveal">Pengumuman</h2>
 
-  <div class="pengumuman-grid">
+  <div class="container">
 
-    <div class="pengumuman-card reveal">
+    <h2 class="section-title reveal">Pengumuman</h2>
+
+    <div class="pengumuman-grid">
+
+      <!-- Card 1 -->
+      <div class="pengumuman-card reveal">
         <h3>Peraturan</h3>
         <p>
-            Wajib menggunakan sandal saat berangkat,
-            sepatu dipakai waktu di dalam gedung
+          Wajib menggunakan sandal saat berangkat,
+          sepatu dipakai waktu di dalam gedung
         </p>
+      </div>
+
+      <!-- Card 2 -->
+      <div class="pengumuman-card reveal">
+        <h3>Untuk Pengurus dan Anggota</h3>
+        <p>
+          Diusahakan datang tepat waktu dan selalu menjaga kebersihan gedung
+        </p>
+      </div>
+
     </div>
 
-    <div class="pengumuman-card reveal">
-        <h3>Untuk pengurus dan anggota</h3>
-        <p>
-            Diusahakan datang tepat waktu dan selalu menjaga kebersihan gedung
-        </p>
-</div>
+  </div>
 
-</div>
 </section>
 
 <!-- ===== SURVEY ===== -->
