--- a/index.html
+++ b/index.html
@@ -372,7 +372,33 @@ Isi Survey
 
 <!-- ===== FOOTER ===== -->
 <footer class="footer">
-<p>© Badminton Smangat</p>
+
+  <div class="footer-glow"></div>
+
+  <div class="footer-container">
+
+    <h2 class="footer-logo">BADMINTON SMANGAT</h2>
+
+    <p class="footer-desc">
+      Wadah pengembangan bakat, sportivitas, dan prestasi siswa
+      dalam olahraga bulu tangkis.
+    </p>
+
+    <!-- Social -->
+    <div class="footer-social">
+      <a href="https://www.instagram.com/badminton_smangat" target="_blank">
+        <i class="fab fa-instagram"></i>
+      </a>
+    </div>
+
+    <div class="footer-line"></div>
+
+    <p class="footer-copy">
+      © 2026 Badminton Smangat.
+    </p>
+
+  </div>
+
 </footer>
 
 </body>
