--- a/index.html
+++ b/index.html
@@ -3,364 +3,161 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Ekskul Badminton</title>
 
-<link href="https://fonts.googleapis.com/css2?family=Rajdhani:wght@400;500;600;700&family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
+<title>Badminton Smangat</title>
 
 <link rel="stylesheet" href="style.css">
+
+<!-- Font -->
+<link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@600;800&family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+
+<!-- Icon -->
+<link rel="stylesheet"
+href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+
 </head>
 
 <body>
 
-<!-- ===== NAVBAR ===== -->
+<!-- NAVBAR -->
 <nav class="navbar">
-    <div class="nav-container">
+<h2 class="logo">BADMINTON</h2>
 
-        <h2 class="logo">BADMINTON</h2>
+<ul class="nav-links">
+<li><a href="#home">Home</a></li>
+<li><a href="#profil">Profil</a></li>
+<li><a href="#struktur">Struktur</a></li>
+<li><a href="#galeri">Galeri</a></li>
+<li><a href="#prestasi">Prestasi</a></li>
+<li><a href="#jadwal">Jadwal</a></li>
+<li><a href="#pengumuman">Pengumuman</a></li>
+<li><a href="#survey">Survey</a></li>
+</ul>
 
-        <ul class="nav-links">
-            <li><a href="#home">Home</a></li>
-            <li><a href="#profil">Profil</a></li>
-            <li><a href="#struktur">Struktur</a></li>
-            <li><a href="#galeri">Galeri</a></li>
-            <li><a href="#prestasi">Prestasi</a></li>
-            <li><a href="#jadwal">Jadwal</a></li>
-            <li><a href="#pengumuman">Pengumuman</a></li>
-            <li><a href="#survey">Survey</a></li>
-        </ul>
-
-        <div class="hamburger">
-            <span></span>
-            <span></span>
-            <span></span>
-        </div>
-
-    </div>
+<div class="hamburger">☰</div>
 </nav>
 
-<!-- ===== HERO ===== -->
-<section id="home" class="section hero">
+<!-- HOME -->
+<section id="home" class="home">
+<div class="home-content reveal">
+<h1>Badminton Smangat</h1>
+<p>Wadah pengembangan bakat dan prestasi bulu tangkis siswa.</p>
 
-    <div class="hero-content">
-        <h1 class="reveal-text">Badminton Smangat</h1>
-
-        <p class="reveal delay">
-            Wadah pengembangan bakat dan prestasi bulu tangkis siswa.
-        </p>
-
-        <div class="hero-buttons reveal delay2">
-            <a href="#jadwal" class="btn-primary">Lihat Jadwal</a>
-
-            <a href="#survey" class="btn-primary">
-                Isi Survey
-            </a>
-
-            <a href="https://www.instagram.com/badminton_smangat"
-            target="_blank"
-            class="btn-secondary">
-                Instagram
-            </a>
-        </div>
-    </div>
-
-</section>
-
-<!-- ===== PROFIL ===== -->
-<section id="profil" class="section profil-section">
-
-    <div class="profil-wrapper">
-
-        <!-- TEXT -->
-        <div class="profil-text card reveal">
-            <h2>Profil Ekskul</h2>
-
-            <p>
-                Ekskul badminton merupakan wadah pengembangan kemampuan teknik,
-                strategi permainan, serta pembentukan karakter disiplin dan sportivitas.
-            </p>
-
-            <p>
-                Kegiatan latihan dilakukan secara rutin dengan pembinaan dari pelatih
-                berpengalaman untuk meningkatkan prestasi siswa.
-            </p>
-        </div>
-
-
-        <!-- IMAGE -->
-        <div class="profil-image reveal delay">
-            <img src="img/logo.jpeg" alt="Logo Ekskul">
-        </div>
-
-    </div>
-
-</section>
-
-<!-- ===== STRUKTUR ===== -->
-<section id="struktur" class="section struktur-section">
-
-<h2 class="reveal">Struktur Organisasi</h2>
-
-<div class="struktur-wrapper">
-
-    <!-- TOP : PELATIH -->
-    <div class="struktur-row center reveal">
-        <div class="card struktur-card">
-            <h3>Pelatih</h3>
-            <p>Wahyu Nur Wachid</p>
-        </div>
-
-        <div class="card struktur-card">
-            <h3>Pelatih</h3>
-            <p>M. Revan Anggara</p>
-        </div>
-    </div>
-
-
-    <!-- KETUA -->
-    <div class="struktur-row center reveal delay">
-        <div class="card struktur-card utama">
-            <h3>Ketua</h3>
-            <p>Fajar Sakti Ardhiansyah</p>
-        </div>
-    </div>
-
-
-    <!-- WAKIL -->
-    <div class="struktur-row center reveal delay2">
-        <div class="card struktur-card">
-            <h3>Wakil Ketua</h3>
-            <p>Dafi Fahrudin</p>
-        </div>
-    </div>
-
-
-    <!-- SEKRETARIS -->
-    <div class="struktur-row reveal">
-        <div class="card struktur-card">
-            <h3>Sekretaris 1</h3>
-            <p>Sesya Echa Kirani Putri</p>
-        </div>
-
-        <div class="card struktur-card">
-            <h3>Sekretaris 2</h3>
-            <p>Farsya Latifa</p>
-        </div>
-    </div>
-
-
-    <!-- BENDAHARA -->
-    <div class="struktur-row reveal">
-        <div class="card struktur-card">
-            <h3>Bendahara 1</h3>
-            <p>Dewi Gita Surya Lestari</p>
-        </div>
-
-        <div class="card struktur-card">
-            <h3>Bendahara 2</h3>
-            <p>Aghnidya Laksmi</p>
-        </div>
-    </div>
-
-
-    <!-- SIE -->
-    <div class="struktur-row reveal">
-        <div class="card struktur-card">
-            <h3>Sie Kebersihan 1</h3>
-            <p>Minannur Rohman</p>
-        </div>
-
-        <div class="card struktur-card">
-            <h3>Sie Kebersihan 2</h3>
-            <p>Fandi Pradana</p>
-        </div>
-    </div>
+<a href="#survey" class="btn-primary">
+Isi Survey
+</a>
 
 </div>
-
 </section>
 
-<!-- ===== GALERI ===== -->
-<section id="galeri" class="section galeri-section">
+<!-- PROFIL -->
+<section id="profil" class="profil">
+<div class="profil-card reveal">
+<h2 class="section-title">Profil Ekskul</h2>
 
-<h2 class="reveal">Galeri Kegiatan</h2>
+<p>
+Ekskul badminton merupakan wadah pengembangan teknik,
+strategi, dan karakter sportivitas siswa.
+</p>
 
-<!-- EVENT 1 -->
-<div class="galeri-block">
-
-    <h3 class="reveal">Latihan Rutin</h3>
-
-    <div class="galeri-slider">
-
-        <div class="galeri-track">
-
-            <img src="img/g1.jpg">
-            <img src="img/g2.jpg">
-            <img src="img/g3.jpg">
-            <img src="img/g4.jpg">
-            <img src="img/g5.jpg">
-            <img src="img/g6.jpg">
-
-        </div>
-
-    </div>
-
+<img src="img/logo.jpeg">
 </div>
-
-
-<!-- EVENT 2 -->
-<div class="galeri-block">
-
-    <h3 class="reveal">Turnamen</h3>
-
-    <div class="galeri-slider">
-
-        <div class="galeri-track">
-
-            <img src="img/v1.jpg">
-            <img src="img/v2.jpg">
-
-        </div>
-
-    </div>
-
-</div>
-
 </section>
 
-<!-- ===== PRESTASI ===== -->
-<section id="prestasi" class="section prestasi-section">
+<!-- STRUKTUR -->
+<section id="struktur" class="struktur">
+<h2 class="section-title reveal">Struktur Organisasi</h2>
 
-<h2 class="reveal">Prestasi</h2>
+<div class="struktur-grid">
 
-<div class="prestasi-slider">
-
-    <div class="prestasi-track">
-
-        <!-- CARD -->
-        <div class="prestasi-item">
-            <img src="img/p1.jpg">
-
-            <div class="prestasi-overlay">
-                <h3>Juara 1</h3>
-                <p>Turnamen Beregu PB Dworowati</p>
-            </div>
-        </div>
-
-
-        <div class="prestasi-item">
-            <img src="img/p2.jpg">
-
-            <div class="prestasi-overlay">
-                <h3>Juara 2</h3>
-                <p>Turnamen Beregu PB Dworowati</p>
-            </div>
-        </div>
-
-
-        <div class="prestasi-item">
-            <img src="img/p3.jpg">
-
-            <div class="prestasi-overlay">
-                <h3>Juara 2</h3>
-                <p>Turnamen Beregu PB Dworowati</p>
-            </div>
-        </div>
-
-
-        <div class="prestasi-item">
-            <img src="img/p4.jpg">
-
-            <div class="prestasi-overlay">
-                <h3>Juara 1 & 2</h3>
-                <p>Turnamen Ganda C PB Dworowati</p>
-            </div>
-        </div>
-
-    </div>
+<div class="card reveal"><h3>Pelatih</h3><p>Wahyu Nur Wachid</p></div>
+<div class="card reveal"><h3>Pelatih</h3><p>M. Revan Anggara</p></div>
+<div class="card reveal"><h3>Ketua</h3><p>Fajar Sakti</p></div>
+<div class="card reveal"><h3>Wakil</h3><p>Dafi Fahrudin</p></div>
 
 </div>
-
 </section>
 
-<!-- ===== JADWAL ===== -->
-<section id="jadwal" class="section jadwal-section">
+<!-- GALERI -->
+<section id="galeri" class="galeri">
+<h2 class="section-title reveal">Galeri</h2>
 
-<h2 class="reveal">Jadwal Latihan</h2>
+<div class="galeri-track">
 
-<div class="jadwal-wrapper reveal delay">
-
-    <table class="jadwal-table">
-
-        <thead>
-            <tr>
-                <th>Hari</th>
-                <th>Waktu</th>
-                <th>Tempat</th>
-            </tr>
-        </thead>
-
-        <tbody>
-            <tr>
-                <td>Kamis</td>
-                <td>16.00</td>
-                <td>Gedung Serbaguna Ngantang</td>
-            </tr>
-
-            <tr>
-                <td>Sabtu</td>
-                <td>08.00</td>
-                <td>Gedung Serbaguna Ngantang</td>
-            </tr>
-        </tbody>
-
-    </table>
+<img src="img/g1.jpg">
+<img src="img/g2.jpg">
+<img src="img/g3.jpg">
+<img src="img/g4.jpg">
 
 </div>
-
 </section>
 
-<!-- ===== PENGUMUMAN ===== -->
+<!-- PRESTASI -->
+<section id="prestasi" class="prestasi">
+<h2 class="section-title reveal">Prestasi</h2>
+
+<div class="prestasi-track">
+
+<div class="prestasi-card">
+<img src="img/p1.jpg">
+<p>Juara 1 Turnamen</p>
+</div>
+
+<div class="prestasi-card">
+<img src="img/p2.jpg">
+<p>Juara 2 Turnamen</p>
+</div>
+
+</div>
+</section>
+
+<!-- JADWAL -->
+<section id="jadwal" class="jadwal">
+<h2 class="section-title reveal">Jadwal</h2>
+
+<table class="reveal">
+<tr>
+<th>Hari</th>
+<th>Waktu</th>
+<th>Tempat</th>
+</tr>
+
+<tr>
+<td>Kamis</td>
+<td>16.00</td>
+<td>Gedung Ngantang</td>
+</tr>
+</table>
+</section>
+
+<!-- PENGUMUMAN -->
 <section id="pengumuman" class="pengumuman">
+<h2 class="section-title reveal">Pengumuman</h2>
 
-  <div class="container">
+<div class="pengumuman-grid">
 
-    <h2 class="section-title reveal">Pengumuman</h2>
+<div class="pengumuman-card reveal">
+<h3>Peraturan</h3>
+<p>Gunakan sandal saat datang</p>
+</div>
 
-    <div class="pengumuman-grid">
+<div class="pengumuman-card reveal">
+<h3>Untuk anggota</h3>
+<p>Harap datang tepat waktu</p>
+</div>
 
-      <!-- Card 1 -->
-      <div class="pengumuman-card reveal">
-        <h3>Peraturan</h3>
-        <p>
-          Wajib menggunakan sandal saat berangkat,
-          sepatu dipakai waktu di dalam gedung
-        </p>
-      </div>
-
-      <!-- Card 2 -->
-      <div class="pengumuman-card reveal">
-        <h3>Untuk Pengurus dan Anggota</h3>
-        <p>
-          Diusahakan datang tepat waktu dan selalu menjaga kebersihan gedung
-        </p>
-      </div>
-
-    </div>
-
-  </div>
-
+</div>
 </section>
 
-<!-- ===== SURVEY ===== -->
+<!-- SURVEY -->
 <section id="survey" class="survey">
-  <div class="survey-container reveal">
+<div class="survey-container reveal">
 
-    <h2 class="section-title">Survey Kepuasan</h2>
+<h2 class="section-title">Survey Kepuasan</h2>
 
-    <p class="survey-text">
-      Bantu kami berkembang dengan mengisi survey kepuasan. 
-      Masukan kalian penting banget buat peningkatan kualitas organisasi.
-    </p>
+<p class="survey-text">
+Bantu kami berkembang dengan mengisi survey.
+</p>
 
 <a href="https://surveyheart.com/form/69925bd88954acdeb7cd3a86"
 target="_blank"
@@ -368,44 +165,16 @@ class="btn-primary">
 Isi Survey
 </a>
 
+</div>
 </section>
 
-<!-- ===== FOOTER ===== -->
+<!-- FOOTER -->
 <footer class="footer">
-
-  <div class="footer-glow"></div>
-
-  <div class="footer-container">
-
-    <h2 class="footer-logo">BADMINTON SMANGAT</h2>
-
-    <p class="footer-desc">
-      Wadah pengembangan bakat, sportivitas, dan prestasi siswa
-      dalam olahraga bulu tangkis.
-    </p>
-
-    <!-- Social -->
-    <div class="footer-social">
-      <a href="https://www.instagram.com/badminton_smangat" target="_blank">
-        <i class="fab fa-instagram"></i>
-      </a>
-    </div>
-
-    <div class="footer-line"></div>
-
-    <p class="footer-copy">
-      © 2026 Badminton Smangat.
-    </p>
-
-  </div>
-
+<p>© 2026 Badminton Smangat</p>
 </footer>
 
-    <button class="back-to-top">
-      ↑
-    </button>
+<button class="back-to-top">↑</button>
 
-    <script src="script.js"></script>
-
+<script src="script.js"></script>
 </body>
 </html>
