--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <title>Ekskul Badminton</title>
 
 <link href="https://fonts.googleapis.com/css2?family=Rajdhani:wght@400;500;600;700&family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
-
+    
 <link rel="stylesheet"
 href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
@@ -15,392 +15,402 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
 
 <body>
 
-<!-- NAVBAR -->
+<!-- ===== NAVBAR ===== -->
 <nav class="navbar">
-<div class="nav-container">
+    <div class="nav-container">
 
-<h2 class="logo">BADMINTON</h2>
+        <h2 class="logo">BADMINTON</h2>
 
-<ul class="nav-links">
-<li><a href="#home">Home</a></li>
-<li><a href="#profil">Profil</a></li>
-<li><a href="#struktur">Struktur</a></li>
-<li><a href="#galeri">Galeri</a></li>
-<li><a href="#prestasi">Prestasi</a></li>
-<li><a href="#jadwal">Jadwal</a></li>
-<li><a href="#pengumuman">Pengumuman</a></li>
-<li><a href="#survey">Survey</a></li>
-</ul>
+        <ul class="nav-links">
+            <li><a href="#home">Home</a></li>
+            <li><a href="#profil">Profil</a></li>
+            <li><a href="#struktur">Struktur</a></li>
+            <li><a href="#galeri">Galeri</a></li>
+            <li><a href="#prestasi">Prestasi</a></li>
+            <li><a href="#jadwal">Jadwal</a></li>
+            <li><a href="#pengumuman">Pengumuman</a></li>
+            <li><a href="#survey">Survey</a></li>
+        </ul>
 
-<div class="hamburger">
-<span></span>
-<span></span>
-<span></span>
-</div>
+        <div class="hamburger">
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
 
-</div>
+    </div>
 </nav>
 
-
-<!-- HERO -->
+<!-- ===== HERO ===== -->
 <section id="home" class="section hero">
 
-<div class="hero-content">
-<h1 class="reveal-text">Badminton Smangat</h1>
+    <div class="hero-content">
+        <h1 class="reveal-text">Badminton Smangat</h1>
 
-<p class="reveal delay">
-Wadah pengembangan bakat dan prestasi bulu tangkis siswa.
-</p>
+        <p class="reveal delay">
+            Wadah pengembangan bakat dan prestasi bulu tangkis siswa.
+        </p>
 
-<div class="hero-buttons reveal delay2">
+        <div class="hero-buttons reveal delay2">
+            <a href="#jadwal" class="btn-primary">Lihat Jadwal</a>
 
-<a href="#jadwal" class="btn-primary">Lihat Jadwal</a>
+            <a href="#survey" class="btn-primary">
+                Isi Survey
+            </a>
 
-<a href="#survey" class="btn-primary">Isi Survey</a>
-
-<a href="https://www.instagram.com/badminton_smangat"
-target="_blank"
-class="btn-secondary">
-Instagram
-</a>
-
-</div>
-</div>
+            <a href="https://www.instagram.com/badminton_smangat"
+            target="_blank"
+            class="btn-secondary">
+                Instagram
+            </a>
+        </div>
+    </div>
 
 </section>
 
-
-<!-- PROFIL -->
+<!-- ===== PROFIL ===== -->
 <section id="profil" class="section profil-section">
 
-<div class="profil-wrapper">
+    <div class="profil-wrapper">
 
-<div class="profil-text card reveal">
-<h2>Profil Ekskul</h2>
+        <!-- TEXT -->
+        <div class="profil-text card reveal">
+            <h2>Profil Ekskul</h2>
 
-<p>
-Ekskul badminton merupakan wadah pengembangan kemampuan teknik,
-strategi permainan, serta pembentukan karakter disiplin dan sportivitas.
-</p>
+            <p>
+                Ekskul badminton merupakan wadah pengembangan kemampuan teknik,
+                strategi permainan, serta pembentukan karakter disiplin dan sportivitas.
+            </p>
 
-<p>
-Kegiatan latihan dilakukan secara rutin dengan pembinaan dari pelatih
-berpengalaman untuk meningkatkan prestasi siswa.
-</p>
-</div>
+            <p>
+                Kegiatan latihan dilakukan secara rutin dengan pembinaan dari pelatih
+                berpengalaman untuk meningkatkan prestasi siswa.
+            </p>
+        </div>
 
-<div class="profil-image reveal delay">
-<img src="img/logo.jpeg" alt="Logo Ekskul Badminton">
-</div>
 
-</div>
+        <!-- IMAGE -->
+        <div class="profil-image reveal delay">
+            <img src="img/logo.jpeg" alt="Logo Ekskul">
+        </div>
+
+    </div>
 
 </section>
 
-
-<!-- STRUKTUR -->
+<!-- ===== STRUKTUR ===== -->
 <section id="struktur" class="section struktur-section">
 
 <h2 class="reveal">Struktur Organisasi</h2>
 
 <div class="struktur-wrapper">
 
-<div class="struktur-row center reveal">
+    <!-- TOP : PELATIH -->
+    <div class="struktur-row center reveal">
+        <div class="card struktur-card">
+            <h3>Pelatih</h3>
+            <p>Wahyu Nur Wachid</p>
+        </div>
 
-<div class="card struktur-card">
-<h3>Pelatih</h3>
-<p>Wahyu Nur Wachid</p>
-</div>
-
-<div class="card struktur-card">
-<h3>Pelatih</h3>
-<p>M. Revan Anggara</p>
-</div>
-
-</div>
-
-
-<div class="struktur-row center reveal delay">
-
-<div class="card struktur-card utama">
-<h3>Ketua</h3>
-<p>Fajar Sakti Ardhiansyah</p>
-</div>
-
-</div>
+        <div class="card struktur-card">
+            <h3>Pelatih</h3>
+            <p>M. Revan Anggara</p>
+        </div>
+    </div>
 
 
-<div class="struktur-row center reveal delay2">
-
-<div class="card struktur-card">
-<h3>Wakil Ketua</h3>
-<p>Dafi Fahrudin</p>
-</div>
-
-</div>
-
-
-<div class="struktur-row reveal">
-
-<div class="card struktur-card">
-<h3>Sekretaris 1</h3>
-<p>Sesya Echa Kirani Putri</p>
-</div>
-
-<div class="card struktur-card">
-<h3>Sekretaris 2</h3>
-<p>Farsya Latifa</p>
-</div>
-
-</div>
+    <!-- KETUA -->
+    <div class="struktur-row center reveal delay">
+        <div class="card struktur-card utama">
+            <h3>Ketua</h3>
+            <p>Fajar Sakti Ardhiansyah</p>
+        </div>
+    </div>
 
 
-<div class="struktur-row reveal">
-
-<div class="card struktur-card">
-<h3>Bendahara 1</h3>
-<p>Dewi Gita Surya Lestari</p>
-</div>
-
-<div class="card struktur-card">
-<h3>Bendahara 2</h3>
-<p>Aghnidya Laksmi</p>
-</div>
-
-</div>
+    <!-- WAKIL -->
+    <div class="struktur-row center reveal delay2">
+        <div class="card struktur-card">
+            <h3>Wakil Ketua</h3>
+            <p>Dafi Fahrudin</p>
+        </div>
+    </div>
 
 
-<div class="struktur-row reveal">
+    <!-- SEKRETARIS -->
+    <div class="struktur-row reveal">
+        <div class="card struktur-card">
+            <h3>Sekretaris 1</h3>
+            <p>Sesya Echa Kirani Putri</p>
+        </div>
 
-<div class="card struktur-card">
-<h3>Sie Kebersihan 1</h3>
-<p>Minannur Rohman</p>
-</div>
+        <div class="card struktur-card">
+            <h3>Sekretaris 2</h3>
+            <p>Farsya Latifa</p>
+        </div>
+    </div>
 
-<div class="card struktur-card">
-<h3>Sie Kebersihan 2</h3>
-<p>Fandi Pradana</p>
-</div>
+
+    <!-- BENDAHARA -->
+    <div class="struktur-row reveal">
+        <div class="card struktur-card">
+            <h3>Bendahara 1</h3>
+            <p>Dewi Gita Surya Lestari</p>
+        </div>
+
+        <div class="card struktur-card">
+            <h3>Bendahara 2</h3>
+            <p>Aghnidya Laksmi</p>
+        </div>
+    </div>
+
+
+    <!-- SIE -->
+    <div class="struktur-row reveal">
+        <div class="card struktur-card">
+            <h3>Sie Kebersihan 1</h3>
+            <p>Minannur Rohman</p>
+        </div>
+
+        <div class="card struktur-card">
+            <h3>Sie Kebersihan 2</h3>
+            <p>Fandi Pradana</p>
+        </div>
+    </div>
 
 </div>
 
-</div>
 </section>
 
-
-<!-- GALERI -->
+<!-- ===== GALERI ===== -->
 <section id="galeri" class="section galeri-section">
 
 <h2 class="reveal">Galeri Kegiatan</h2>
 
-
+<!-- EVENT 1 -->
 <div class="galeri-block">
-<h3 class="reveal">Latihan Rutin</h3>
 
-<div class="galeri-slider">
-<div class="galeri-track">
+    <h3 class="reveal">Latihan Rutin</h3>
 
-<img src="img/g1.jpg" alt="Latihan 1">
-<img src="img/g2.jpg" alt="Latihan 2">
-<img src="img/g3.jpg" alt="Latihan 3">
-<img src="img/g4.jpg" alt="Latihan 4">
-<img src="img/g5.jpg" alt="Latihan 5">
-<img src="img/g6.jpg" alt="Latihan 6">
+    <div class="galeri-slider">
+
+        <div class="galeri-track">
+
+            <img src="img/g1.jpg">
+            <img src="img/g2.jpg">
+            <img src="img/g3.jpg">
+            <img src="img/g4.jpg">
+            <img src="img/g5.jpg">
+            <img src="img/g6.jpg">
+
+        </div>
+
+    </div>
 
 </div>
-</div>
-</div>
 
 
+<!-- EVENT 2 -->
 <div class="galeri-block">
-<h3 class="reveal">Turnamen</h3>
 
-<div class="galeri-slider">
-<div class="galeri-track">
+    <h3 class="reveal">Turnamen</h3>
 
-<img src="img/v1.jpg" alt="Turnamen 1">
-<img src="img/v2.jpg" alt="Turnamen 2">
+    <div class="galeri-slider">
 
-</div>
-</div>
+        <div class="galeri-track">
+
+            <img src="img/v1.jpg">
+            <img src="img/v2.jpg">
+
+        </div>
+
+    </div>
+
 </div>
 
 </section>
 
-
-<!-- PRESTASI -->
+<!-- ===== PRESTASI ===== -->
 <section id="prestasi" class="section prestasi-section">
 
 <h2 class="reveal">Prestasi</h2>
 
 <div class="prestasi-slider">
-<div class="prestasi-track">
 
-<div class="prestasi-item">
-<img src="img/p1.jpg" alt="Prestasi 1">
-<div class="prestasi-overlay">
-<h3>Juara 1</h3>
-<p>Turnamen Beregu PB Dworowati</p>
-</div>
-</div>
+    <div class="prestasi-track">
 
+        <!-- CARD -->
+        <div class="prestasi-item">
+            <img src="img/p1.jpg">
 
-<div class="prestasi-item">
-<img src="img/p2.jpg" alt="Prestasi 2">
-<div class="prestasi-overlay">
-<h3>Juara 2</h3>
-<p>Turnamen Beregu PB Dworowati</p>
-</div>
-</div>
+            <div class="prestasi-overlay">
+                <h3>Juara 1</h3>
+                <p>Turnamen Beregu PB Dworowati</p>
+            </div>
+        </div>
 
 
-<div class="prestasi-item">
-<img src="img/p3.jpg" alt="Prestasi 3">
-<div class="prestasi-overlay">
-<h3>Juara 2</h3>
-<p>Turnamen Beregu PB Dworowati</p>
-</div>
-</div>
+        <div class="prestasi-item">
+            <img src="img/p2.jpg">
+
+            <div class="prestasi-overlay">
+                <h3>Juara 2</h3>
+                <p>Turnamen Beregu PB Dworowati</p>
+            </div>
+        </div>
 
 
-<div class="prestasi-item">
-<img src="img/p4.jpg" alt="Prestasi 4">
-<div class="prestasi-overlay">
-<h3>Juara 1 & 2</h3>
-<p>Turnamen Ganda C PB Dworowati</p>
-</div>
-</div>
+        <div class="prestasi-item">
+            <img src="img/p3.jpg">
 
-</div>
+            <div class="prestasi-overlay">
+                <h3>Juara 2</h3>
+                <p>Turnamen Beregu PB Dworowati</p>
+            </div>
+        </div>
+
+
+        <div class="prestasi-item">
+            <img src="img/p4.jpg">
+
+            <div class="prestasi-overlay">
+                <h3>Juara 1 & 2</h3>
+                <p>Turnamen Ganda C PB Dworowati</p>
+            </div>
+        </div>
+
+    </div>
+
 </div>
 
 </section>
 
-
-<!-- JADWAL -->
+<!-- ===== JADWAL ===== -->
 <section id="jadwal" class="section jadwal-section">
 
 <h2 class="reveal">Jadwal Latihan</h2>
 
 <div class="jadwal-wrapper reveal delay">
 
-<table class="jadwal-table">
+    <table class="jadwal-table">
 
-<thead>
-<tr>
-<th>Hari</th>
-<th>Waktu</th>
-<th>Tempat</th>
-</tr>
-</thead>
+        <thead>
+            <tr>
+                <th>Hari</th>
+                <th>Waktu</th>
+                <th>Tempat</th>
+            </tr>
+        </thead>
 
-<tbody>
+        <tbody>
+            <tr>
+                <td>Kamis</td>
+                <td>16.00</td>
+                <td>Gedung Serbaguna Ngantang</td>
+            </tr>
 
-<tr>
-<td>Kamis</td>
-<td>16.00</td>
-<td>Gedung Serbaguna Ngantang</td>
-</tr>
+            <tr>
+                <td>Sabtu</td>
+                <td>08.00</td>
+                <td>Gedung Serbaguna Ngantang</td>
+            </tr>
+        </tbody>
 
-<tr>
-<td>Sabtu</td>
-<td>08.00</td>
-<td>Gedung Serbaguna Ngantang</td>
-</tr>
-
-</tbody>
-</table>
+    </table>
 
 </div>
 
 </section>
 
-
-<!-- PENGUMUMAN -->
+<!-- ===== PENGUMUMAN ===== -->
 <section id="pengumuman" class="pengumuman">
 
-<div class="container">
+  <div class="container">
 
-<h2 class="section-title reveal">Pengumuman</h2>
+    <h2 class="section-title reveal">Pengumuman</h2>
 
-<div class="pengumuman-grid">
+    <div class="pengumuman-grid">
 
-<div class="pengumuman-card reveal">
-<h3>Peraturan</h3>
-<p>
-Wajib menggunakan sandal saat berangkat,
-sepatu dipakai waktu di dalam gedung
-</p>
-</div>
+      <!-- Card 1 -->
+      <div class="pengumuman-card reveal">
+        <h3>Peraturan</h3>
+        <p>
+          Wajib menggunakan sandal saat berangkat,
+          sepatu dipakai waktu di dalam gedung
+        </p>
+      </div>
 
-<div class="pengumuman-card reveal">
-<h3>Untuk Pengurus dan Anggota</h3>
-<p>
-Diusahakan datang tepat waktu dan selalu menjaga kebersihan gedung
-</p>
-</div>
+      <!-- Card 2 -->
+      <div class="pengumuman-card reveal">
+        <h3>Untuk Pengurus dan Anggota</h3>
+        <p>
+          Diusahakan datang tepat waktu dan selalu menjaga kebersihan gedung
+        </p>
+      </div>
 
-</div>
-</div>
+    </div>
+
+  </div>
 
 </section>
 
-
-<!-- SURVEY -->
+<!-- ===== SURVEY ===== -->
 <section id="survey" class="survey">
+  <div class="survey-container reveal">
 
-<div class="survey-container reveal">
+    <h2 class="section-title">Survey Kepuasan</h2>
 
-<h2 class="section-title">Survey Kepuasan</h2>
-
-<p class="survey-text">
-Bantu kami berkembang dengan mengisi survey kepuasan.
-Masukan kalian penting banget buat peningkatan kualitas organisasi.
-</p>
+    <p class="survey-text">
+      Bantu kami berkembang dengan mengisi survey kepuasan. 
+      Masukan kalian penting banget buat peningkatan kualitas organisasi.
+    </p>
 
 <a href="https://surveyheart.com/form/69925bd88954acdeb7cd3a86"
 target="_blank"
 class="btn-primary">
 Isi Survey
 </a>
+    
+    </div>
 
-</div>
 </section>
 
-
-<!-- FOOTER -->
+<!-- ===== FOOTER ===== -->
 <footer class="footer">
 
-<div class="footer-glow"></div>
+  <div class="footer-glow"></div>
 
-<div class="footer-container">
+  <div class="footer-container">
 
-<h2 class="footer-logo">BADMINTON SMANGAT</h2>
+    <h2 class="footer-logo">BADMINTON SMANGAT</h2>
 
-<p class="footer-desc">
-Wadah pengembangan bakat, sportivitas, dan prestasi siswa
-dalam olahraga bulu tangkis.
-</p>
+    <p class="footer-desc">
+      Wadah pengembangan bakat, sportivitas, dan prestasi siswa
+      dalam olahraga bulu tangkis.
+    </p>
 
-<div class="footer-social">
-<a href="https://www.instagram.com/badminton_smangat" target="_blank">
-<i class="fab fa-instagram"></i>
-</a>
-</div>
+    <!-- Social -->
+    <div class="footer-social">
+      <a href="https://www.instagram.com/badminton_smangat" target="_blank">
+        <i class="fab fa-instagram"></i>
+      </a>
+    </div>
 
-<div class="footer-line"></div>
+    <div class="footer-line"></div>
 
-<p class="footer-copy">
-© 2026 Badminton Smangat.
-</p>
+    <p class="footer-copy">
+      © 2026 Badminton Smangat.
+    </p>
 
-</div>
+  </div>
+
 </footer>
 
+    <button class="back-to-top">
+      ↑
+    </button>
 
-<button class="back-to-top">↑</button>
-
-<script src="script.js"></script>
+    <script src="script.js"></script>
 
 </body>
 </html>
